tests/backend/checkmach/test_warning198.ml
let[@zero_alloc assume] bar y = (y+1,y)

